overlays/development/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # setting basic authentication 
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: nginx-ingress-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'

    # kubernetes.io/tls-acme: "true"
    # certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/server-snippet: |
      location = /favicon.ico {
        access_log off;
        log_not_found off;
      }
      location = /nginx_status {
        stub_status on;
        access_log off;
        log_not_found off;
      }
      location = /apple-app-site-association {
        access_log off;
        log_not_found off;
      }
      location = /.well-known/apple-app-site-association {
        access_log off;
        log_not_found off;
      }
spec:
  rules:
    - http:
        paths:
          - path: /a/(.*)
            backend:
              serviceName: svc1
              servicePort: 80
          - path: /b/(.*)
            backend:
              serviceName: svc2
              servicePort: 80
          - path: /(.*)
            backend:
              serviceName: blackhole
              servicePort: 80
